# AiForThai-linebot-workshop-codespace

./: .devcontainer.json  .gitignore  Dockerfile  README.md  postcreate.sh  pyproject.toml  requirements.txt
app/: service_image.py  service_main.py  service_nlp.py  service_webhook.py
